--- a/app/Resources/views/email/meetAgain.html.twig
+++ b/app/Resources/views/email/meetAgain.html.twig
@@ -4,18 +4,10 @@
 <p>
     Hej {{ user.firstName }}!
 </p>
-{% if connection.fluentSpeakerMeetingStatus == constant('AppBundle\\Enum\\MeetingTypes::MET') %}
-    <p>
-        Vi skriver till dig eftersom du tidigare har träffat en kompis via Kompisbyrån. Just nu är det många nya svenskar
-        som önskar träffa etablerade svenskar. <strong>Därför undrar vi om du skulle vilja vara med igen och bli matchad
-        med en ny kompis?</strong>.
-{% else %}
-    <p>
-        Du får det här mailet eftersom vi för ett tag sedan matchade ihop dig med {{ connection.learner.firstName }}
-        via Kompisbyrån. Du har angett att ni inte kommer träffas och därför vill vi erbjuda dig att få en ny
-        kompismatchning istället.
-{% endif %}
-    Om du vill få en ny matchning behöver du bara klicka på knappen
+<p>
+    Vi skriver till dig eftersom du tidigare har träffat en kompis via Kompisbyrån. Just nu är det många nya svenskar
+    som önskar träffa etablerade svenskar. <strong>Därför undrar vi om du skulle vilja vara med igen och bli matchad
+    med en ny kompis?</strong>. Om du vill få en ny matchning behöver du bara klicka på knappen
     <a href="{{ url('public_meet_again', {'uuid': user.uuid, 'id': connection.id}) }}">på den här sidan</a>.
 </p>
 <p>
