--- a/app/Resources/views/default/danderyd.html.twig
+++ b/app/Resources/views/default/danderyd.html.twig
@@ -2,17 +2,15 @@
 
 {% block body %}
 
-
-
     <div class="inner-page about-us">
         <div class="container">
-            <h2><strong>{{ 'header'|trans({}, 'danderyd') }}</strong><br>{{ 'sub_header'|trans({}, 'danderyd') }}</h2>
+            <h2><strong>{{ 'header'|trans({}, 'danderyd') }}</strong><br><span>{{ 'sub_header'|trans({}, 'danderyd') }}</span></h2>
             <p>{{ 'intro'|trans({}, 'danderyd') }}</p>
         </div>
     </div>
 
-            <div class="cta">
-                <div class="container">
+    <div class="cta">
+        <div class="container">
             <div class="cta-item">
                 <div class="row">
                     <div class="col-md-6 col-sm-6">
@@ -22,7 +20,7 @@
                         <div class="container">
                             <form method="POST" action="{{ path('danderyd') }}" class="form-horizontal">
                                 <div class="form-group">
-                                    <label for="email" class="control-label">{{ 'cta.label'|trans({}, 'danderyd') }}</label>
+                                    <label for="email" class="control-label">{{ 'cta.label'|trans({}, 'danderyd') }} <sup>*</sup></label>
                                     <input type="text" name="email" value="{{ email }}" required="required" class="form-control">
                                 </div>
                                 <div class="form-group">
@@ -30,7 +28,6 @@
                                 </div>
                             </form>
 
-                            <p>{{ 'cta.disclaimer'|trans({}, 'danderyd') }}</p>
                         </div>
 
                     </div>
@@ -40,19 +37,24 @@
                 </div>
             </div>
 
-                <h2>{{ 'header2'|trans({}, 'danderyd') }}</h2>
-                <p>{{ 'text'|trans({}, 'danderyd')|raw }}</p>
+            <h2>{{ 'header2'|trans({}, 'danderyd') }}</h2>
+            <p>{{ 'text'|trans({}, 'danderyd')|raw }}</p>
 
-                <div class="row" style="margin-top:60px;">
-                    <div class="col-md-6 col-sm-6">
-                        {{ 'footer'|trans({}, 'danderyd') }}
-                    </div>
-                    <div class="col-md-6 col-sm-6 text-right">
-                        <img src="{{ asset('images/danderyd-logo.jpg') }}" width="200" alt="Danderyd kommun" />
-
-                        <img src="{{ asset('images/alla-tillsammans-i-danderyd.jpg') }}"  width="150" alt="Alla tillsammans i Danderyd" style="margin-left:50px;" />
-                    </div>
+            <div class="row" style="margin-top:60px;">
+                <div class="col-md-6 col-sm-6">
+                    {{ 'footer'|trans({}, 'danderyd') }}
                 </div>
+                <div class="col-md-6 col-sm-6 text-right">
+                    <img src="{{ asset('images/danderyd-logo.jpg') }}" width="200" alt="Danderyd kommun" />
+
+                    <img src="{{ asset('images/alla-tillsammans-i-danderyd.jpg') }}"  width="150" alt="Alla tillsammans i Danderyd" style="margin-left:50px;" />
+                </div>
+            </div>
+            <div class="row" style="margin-top:60px;">
+                <div class="col-md-12">
+                    <p>{{ 'cta.disclaimer'|trans({}, 'danderyd') }}</p>
+                </div>
+            </div>
         </div>
     </div>
 
