--- a/app/Resources/views/default/danderyd.html.twig
+++ b/app/Resources/views/default/danderyd.html.twig
@@ -24,7 +24,13 @@
                                     <input type="text" name="email" value="{{ email }}" required="required" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-orange">{{ 'cta.button'|trans({}, 'danderyd') }}</button>
+                                    <input type="checkbox" id="termsAccepted" name="termsAccepted]" required="required">
+                                    <label for="termsAccepted">
+                                        {{ 'register.form.terms'|trans({'%linkStart%': '<a href="' ~ path('terms') ~ '">', '%linkEnd%': '</a>'})|raw }}
+                                    </label>
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit" id="button" class="btn btn-orange">{{ 'cta.button'|trans({}, 'danderyd') }}</button>
                                 </div>
                             </form>
 
@@ -58,4 +64,20 @@
         </div>
     </div>
 
+{% endblock %}
+
+
+{% block javascripts %}
+    <script type="text/javascript">
+        $('#button').attr('disabled', true);
+        $(document).ready(function() {
+            $('#termsAccepted').on('change', function() {
+                if ($(this).prop('checked')) {
+                    $('#button').attr('disabled', false);
+                } else {
+                    $('#button').attr('disabled', true);
+                }
+            });
+        });
+    </script>
 {% endblock %}
