--- a/app/Resources/views/user/form.html.twig
+++ b/app/Resources/views/user/form.html.twig
@@ -91,8 +91,9 @@
     {{ form_widget(connectionRequest) }}
 {% endif %}
 
-
+{% if form.newConnectionRequest is defined %}
 <h3>Om dig</h3>
+{% endif %}
 
 
 <div class="form-group">
@@ -222,8 +223,6 @@
         </div>
     </div>
 </div>
-
-<h3>Dina uppgifter</h3>
 
 <div class="form-group">
     {{ form_label(form.firstName) }}
