--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -163,6 +163,7 @@
                 <p><strong>Matching availability:</strong> <span data-content="availability"></span></p>
                 <p><strong>Matching request:</strong> <span data-content="matching_profile_request_type"></span></p>
                 <p><strong>Extra person:</strong> <span data-content="extra_person"></span></p>
+                <p><strong>Match family:</strong> <span data-content="match_family"></span></p>
                 <p data-content="about"></p>
                 <p data-content="activities"></p>
                 <p>
