--- a/app/Resources/views/admin2/user/info.html.twig
+++ b/app/Resources/views/admin2/user/info.html.twig
@@ -88,6 +88,18 @@
                 </div>
             </div>
         </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">{{ 'Match family'|trans }}</label>
+            <div class="col-sm-10">
+                <div class="form-control">
+                    {% if connectionRequest.matchFamily %}
+                        Ja
+                    {% else %}
+                        Nej
+                    {% endif %}
+                </div>
+            </div>
+        </div>
     </div>
     <div class="col-md-7">
         <div class="form-group">
