--- a/app/Resources/views/user/form.js.twig
+++ b/app/Resources/views/user/form.js.twig
@@ -119,6 +119,6 @@ $(document).ready(function() {
             $('#match-family').hide();
         }
     });
-    $('input[name$="[municipality]"]').eq(0).trigger('change');
+    $('select[name$="[municipality]"]').eq(0).trigger('change');
 
 });
