--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -22,10 +22,9 @@
                 <div class="partner-wrapper">
                     <img src="{{ asset('images/oppna-dorren.jpg') }}" alt="Öppna dörren" class="partner-logo"><br>
                     <img src="{{ asset('images/delicato.png') }}" alt="Delicato" class="partner-logo"><br>
-                    <img src="{{ asset('images/nacka.jpg') }}" alt="Nacka" class="partner-logo"><br>
                     <img src="{{ asset('images/solna.gif') }}" alt="Solna" class="partner-logo"><br>
                     <img src="{{ asset('images/tyreso.gif') }}" alt="Tyresö" class="partner-logo"><br>
-                    <img src="{{ asset('images/vaxholm.jpg') }}" alt="Vaxholm" class="partner-logo"><br>
+                    <img src="{{ asset('images/eu-flagga.png') }}" alt="EU - Europeiska socialfonden" class="partner-logo"><br>
                 </div>
             </div>
 
