--- a/app/Resources/views/default/danderyd.html.twig
+++ b/app/Resources/views/default/danderyd.html.twig
@@ -17,25 +17,11 @@
 
                         <h2>{{ 'cta.header'|trans({}, 'danderyd') }}</h2>
                         <p>{{ 'cta.intro'|trans({}, 'danderyd') }}</p>
-                        <div class="container">
-                            <form method="POST" action="{{ path('danderyd') }}" class="form-horizontal">
-                                <div class="form-group">
-                                    <label for="email" class="control-label">{{ 'cta.label'|trans({}, 'danderyd') }} <sup>*</sup></label>
-                                    <input type="text" name="email" value="{{ email }}" required="required" class="form-control">
-                                </div>
-                                <div class="form-group">
-                                    <input type="checkbox" id="termsAccepted" name="termsAccepted]" required="required">
-                                    <label for="termsAccepted">
-                                        {{ 'register.form.terms'|trans({'%linkStart%': '<a href="' ~ path('terms') ~ '">', '%linkEnd%': '</a>'})|raw }}
-                                    </label>
-                                </div>
-                                <div class="form-group">
-                                    <button type="submit" id="button" class="btn btn-orange">{{ 'cta.button'|trans({}, 'danderyd') }}</button>
-                                </div>
-                            </form>
-
+                        <div class="caption">
+                            <a href="{{ path('fos_user_registration_register') }}" class="btn btn-lg br-orange">
+                                <i class="fa fa-users"></i> {{ 'homepage.cta.button'|trans }}
+                            </a>
                         </div>
-
                     </div>
                     <div class="col-md-6 col-sm-6">
                         <img src="{{ asset('images/danderyd.jpg') }}" class="img-responsive" alt="" />
@@ -54,11 +40,6 @@
                     <img src="{{ asset('images/danderyd-logo.jpg') }}" width="200" alt="Danderyd kommun" />
 
                     <img src="{{ asset('images/alla-tillsammans-i-danderyd.jpg') }}"  width="150" alt="Alla tillsammans i Danderyd" style="margin-left:50px;" />
-                </div>
-            </div>
-            <div class="row" style="margin-top:60px;">
-                <div class="col-md-12">
-                    <p>{{ 'cta.disclaimer'|trans({}, 'danderyd') }}</p>
                 </div>
             </div>
         </div>
