Custom button text

--- a/app/Resources/views/default/danderyd.html.twig
+++ b/app/Resources/views/default/danderyd.html.twig
@@ -19,7 +19,7 @@
                         <p>{{ 'cta.intro'|trans({}, 'danderyd') }}</p>
                         <div class="caption">
                             <a href="{{ path('fos_user_registration_register') }}" class="btn btn-lg br-orange">
-                                <i class="fa fa-users"></i> {{ 'homepage.cta.button'|trans }}
+                                <i class="fa fa-users"></i> {{ 'button'|trans({}, 'danderyd') }}
                             </a>
                         </div>
                     </div>
