--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -39,7 +39,7 @@
     <!--[if IE]>
     <link rel="stylesheet" href="/css/ie-style.css">
     <![endif]-->
-    <link href="/css/custom.css?v5" rel="stylesheet">
+    <link href="/css/custom.css?vc" rel="stylesheet">
 
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     <style type="text/css">
