With offset and tooltip

--- a/app/Resources/views/user/form.js.twig
+++ b/app/Resources/views/user/form.js.twig
@@ -91,4 +91,7 @@ $(document).ready(function() {
     });
     $('select[name$="[municipality]"]').eq(0).trigger('change');
 
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    });
 });
