--- a/app/Resources/views/user/form.html.twig
+++ b/app/Resources/views/user/form.html.twig
@@ -5,20 +5,27 @@
     <h3>Om mötet</h3>
 {% endif %}
 
-<div class="form-group">
-    {{ form_label(form.municipality) }}
-    <div class="row">
-        <div class="col-sm-4">
-            {{ form_widget(form.municipality) }}
-        </div>
-    </div>
-    {{ form_errors(form.municipality) }}
-</div>
-
 <div class="row">
-    <div class="col-sm-6">
+
+    <div class="col-md-offset-3 col-md-6">
+        <div class="form-group">
+            {{ form_label(form.municipality) }}
+            <div class="row">
+                <div class="col-sm-6">
+                    {{ form_widget(form.municipality) }}
+                </div>
+            </div>
+            {{ form_errors(form.municipality) }}
+        </div>
+
         <div class="form-group">
             {{ form_label(form.city) }}
+            <i class="fa fa-info-circle"
+               data-toggle="tooltip"
+               data-placement="right"
+               title="För att vara med i Kompisbyrån måste du kunna träffas i någon av de städer där vi finns. I rullistan ser du vilka städer som finns tillgängliga.">
+            </i>
+
             <div class="row">
                 <div class="col-sm-8">
                     {{ form_widget(form.city) }}
@@ -26,282 +33,276 @@
             </div>
             {{ form_errors(form.city) }}
         </div>
-    </div>
-    <div class="col-sm-6">
-        <p>
-        <i class="fa fa-info-circle" aria-hidden="true"></i>
-        För att vara med i Kompisbyrån måste du kunna träffas i någon av de städer där vi finns. I rullistan ser du vilka städer som finns tillgängliga.
-        </p>
-    </div>
-</div>
 
-{% if form.type is defined %}
-<div class="form-group">
-    {{ form_label(form.type) }}
-    {{ form_widget(form.type) }}
-    {{ form_errors(form.type) }}
-</div>
-{% endif %}
+        {% if form.type is defined %}
+        <div class="form-group">
+            {{ form_label(form.type) }}
+            {{ form_widget(form.type) }}
+            {{ form_errors(form.type) }}
+        </div>
+        {% endif %}
 
 
-{% if form.newConnectionRequest is defined %}
+        {% if form.newConnectionRequest is defined %}
 
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="form-group">
-                {{ form_label(connectionRequest.matchingProfileRequestType) }}
-                <div class="row">
-                    <div class="col-sm-8">
-                        {{ form_widget(connectionRequest.matchingProfileRequestType) }}
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        {{ form_label(connectionRequest.matchingProfileRequestType) }}
+                        <div class="row">
+                            <div class="col-sm-8">
+                                {{ form_widget(connectionRequest.matchingProfileRequestType) }}
+                            </div>
+                        </div>
+                        {{ form_errors(connectionRequest.matchingProfileRequestType) }}
                     </div>
                 </div>
-                {{ form_errors(connectionRequest.matchingProfileRequestType) }}
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <p>
-            <i class="fa fa-info-circle" aria-hidden="true"></i>
-            Tänk på att ju fler önskemål du har, desto längre tid kan det dröja innan vi hittar en matchning till dig. För att öka chanserna till en snabb matchning - gå in med ett öppet sinne!
-            </p>
-        </div>
-    </div>
-
-    <div class="form-group hidden" id="match-family">
-        {{ form_label(connectionRequest.matchFamily) }}
-        {{ form_widget(connectionRequest.matchFamily) }}
-        {{ form_errors(connectionRequest.matchFamily) }}
-    </div>
-
-
-    {{ form_widget(connectionRequest) }}
-{% endif %}
-
-{% if form.newConnectionRequest is defined %}
-<h3>Om dig</h3>
-{% endif %}
-
-
-<div class="form-group">
-    {{ form_label(form.wantToLearn) }}
-    {{ form_widget(form.wantToLearn) }}
-    {{ form_errors(form.wantToLearn) }}
-</div>
-
-
-<div class="row hidden" id="newlyArrived">
-    <div class="col-sm-6">
-        <div class="form-group">
-            {{ form_label(form.newlyArrived) }}
-            <div class="row">
-                <div class="col-sm-8">
-                    {{ form_widget(form.newlyArrived) }}
+                <div class="col-sm-6">
+                    <p>
+                    <i class="fa fa-info-circle" aria-hidden="true"></i>
+                    Tänk på att ju fler önskemål du har, desto längre tid kan det dröja innan vi hittar en matchning till dig. För att öka chanserna till en snabb matchning - gå in med ett öppet sinne!
+                    </p>
                 </div>
             </div>
-            {{ form_errors(form.newlyArrived) }}
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <p>
-        <i class="fa fa-info-circle" aria-hidden="true"></i>
-        {{ 'user.form.newly_arrived.help'|trans({'%year%': newly_arrived_year(), '%month%': newly_arrived_month_name()}) }}
-        </p>
-    </div>
-</div>
+
+            <div class="form-group hidden" id="match-family">
+                {{ form_label(connectionRequest.matchFamily) }}
+                {{ form_widget(connectionRequest.matchFamily) }}
+                {{ form_errors(connectionRequest.matchFamily) }}
+            </div>
 
 
-<div class="form-group hidden" id="identityNumber">
-    <label class="control-label required">{{ 'user.form.identity_number'|trans }}</label>
-    {{ form_widget(form.identityNumber) }}
-    {{ form_errors(form.identityNumber) }}
-    <p>{{ 'user.form.identity_number.help'|trans({'%linkStart%': '<a href="' ~ path('terms') ~ '">', '%linkEnd%': '</a>'})|raw }}</p>
-</div>
+            {{ form_widget(connectionRequest) }}
+        {% endif %}
 
-<div class="form-group">
-    {{ form_label(form.from) }}
-    <div class="row">
-        <div class="col-sm-4">
-            {{ form_widget(form.from) }}
-        </div>
-    </div>
-    {{ form_errors(form.from) }}
-</div>
+        {% if form.newConnectionRequest is defined %}
+        <h3>Om dig</h3>
+        {% endif %}
 
-<div class="form-group">
-    {{ form_label(form.timeInSweden) }}
-    <div class="row">
-        <div class="col-sm-4">
-            {{ form_widget(form.timeInSweden) }}
-        </div>
-    </div>
-    {{ form_errors(form.timeInSweden) }}
-</div>
 
-<div class="row">
-    <div class="col-sm-6">
         <div class="form-group">
-            {{ form_label(form.about) }}
-            {{ form_widget(form.about, {'attr': {'rows': '4'}}) }}
-            {{ form_errors(form.about) }}
+            {{ form_label(form.wantToLearn) }}
+            {{ form_widget(form.wantToLearn) }}
+            {{ form_errors(form.wantToLearn) }}
         </div>
-    </div>
-    <div class="col-sm-6">
-        ---
-    </div>
-</div>
 
-<div class="row">
-    <div class="col-sm-6">
+
+        <div class="row hidden" id="newlyArrived">
+            <div class="col-sm-6">
+                <div class="form-group">
+                    {{ form_label(form.newlyArrived) }}
+                    <div class="row">
+                        <div class="col-sm-8">
+                            {{ form_widget(form.newlyArrived) }}
+                        </div>
+                    </div>
+                    {{ form_errors(form.newlyArrived) }}
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <p>
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+                {{ 'user.form.newly_arrived.help'|trans({'%year%': newly_arrived_year(), '%month%': newly_arrived_month_name()}) }}
+                </p>
+            </div>
+        </div>
+
+
+        <div class="form-group hidden" id="identityNumber">
+            <label class="control-label required">{{ 'user.form.identity_number'|trans }}</label>
+            {{ form_widget(form.identityNumber) }}
+            {{ form_errors(form.identityNumber) }}
+            <p>{{ 'user.form.identity_number.help'|trans({'%linkStart%': '<a href="' ~ path('terms') ~ '">', '%linkEnd%': '</a>'})|raw }}</p>
+        </div>
+
         <div class="form-group">
-            <label class="control-label required">{{ 'user.form.categories'|trans }}</label>
-            {{ form_widget(form.categories) }}
-            {{ form_errors(form.categories) }}
+            {{ form_label(form.from) }}
+            <div class="row">
+                <div class="col-sm-4">
+                    {{ form_widget(form.from) }}
+                </div>
+            </div>
+            {{ form_errors(form.from) }}
         </div>
-    </div>
-    <div class="col-sm-6">
-        <p>
-        <i class="fa fa-info-circle" aria-hidden="true"></i>
-        {{ 'user.form.categories.help'|trans }}
-        </p>
-    </div>
-</div>
 
-<div class="form-group">
-    {{ form_label(form.occupation) }}
-    <div class="row">
-        <div class="col-sm-4">
-            {{ form_widget(form.occupation) }}
+        <div class="form-group">
+            {{ form_label(form.timeInSweden) }}
+            <div class="row">
+                <div class="col-sm-4">
+                    {{ form_widget(form.timeInSweden) }}
+                </div>
+            </div>
+            {{ form_errors(form.timeInSweden) }}
         </div>
-    </div>
-    {{ form_errors(form.occupation) }}
-</div>
 
-<div id="occupationDescription">
-    <div class="form-group">
-        {{ form_label(form.occupationDescription) }}
         <div class="row">
-            <div class="col-sm-4">
-                {{ form_widget(form.occupationDescription) }}
+            <div class="col-sm-6">
+                <div class="form-group">
+                    {{ form_label(form.about) }}
+                    {{ form_widget(form.about, {'attr': {'rows': '4'}}) }}
+                    {{ form_errors(form.about) }}
+                </div>
+            </div>
+            <div class="col-sm-6">
+                ---
             </div>
         </div>
-        {{ form_errors(form.occupationDescription) }}
-    </div>
-</div>
 
-<div class="form-group">
-    {{ form_label(form.education) }}
-    <div class="row">
-        <div class="col-sm-4">
-            {{ form_widget(form.education) }}
-        </div>
-    </div>
-    {{ form_errors(form.education) }}
-</div>
-
-<div id="educationDescription">
-    <div class="form-group">
-        {{ form_label(form.educationDescription) }}
         <div class="row">
-            <div class="col-sm-4">
-                {{ form_widget(form.educationDescription) }}
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label class="control-label required">{{ 'user.form.categories'|trans }}</label>
+                    {{ form_widget(form.categories) }}
+                    {{ form_errors(form.categories) }}
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <p>
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+                {{ 'user.form.categories.help'|trans }}
+                </p>
             </div>
         </div>
-        {{ form_errors(form.educationDescription) }}
-    </div>
-</div>
 
-<div class="form-group ">
-    {{ form_label(form.hasChildren) }}
-    <div class="row">
-        <div class="col-sm-4">
-            {{ form_widget(form.hasChildren) }}
+        <div class="form-group">
+            {{ form_label(form.occupation) }}
+            <div class="row">
+                <div class="col-sm-4">
+                    {{ form_widget(form.occupation) }}
+                </div>
+            </div>
+            {{ form_errors(form.occupation) }}
         </div>
-    </div>
-    {{ form_errors(form.hasChildren) }}
-</div>
 
-<div id="childrenAge">
-    <div class="form-group">
-        {{ form_label(form.childrenAge) }}
-        <div class="row">
-            <div class="col-sm-4">
-                {{ form_widget(form.childrenAge) }}
+        <div id="occupationDescription">
+            <div class="form-group">
+                {{ form_label(form.occupationDescription) }}
+                <div class="row">
+                    <div class="col-sm-4">
+                        {{ form_widget(form.occupationDescription) }}
+                    </div>
+                </div>
+                {{ form_errors(form.occupationDescription) }}
             </div>
         </div>
-        {{ form_errors(form.childrenAge) }}
-    </div>
-</div>
 
-<h3>Dina uppgifter</h3>
-
-<div class="form-group">
-    {{ form_label(form.firstName) }}
-    <div class="row">
-        <div class="col-sm-4">
-            {{ form_widget(form.firstName) }}
+        <div class="form-group">
+            {{ form_label(form.education) }}
+            <div class="row">
+                <div class="col-sm-4">
+                    {{ form_widget(form.education) }}
+                </div>
+            </div>
+            {{ form_errors(form.education) }}
         </div>
-    </div>
-    {{ form_errors(form.firstName) }}
-</div>
 
-<div class="form-group">
-    {{ form_label(form.lastName) }}
-    <div class="row">
-        <div class="col-sm-4">
-            {{ form_widget(form.lastName) }}
-        </div>
-    </div>
-    {{ form_errors(form.lastName) }}
-</div>
-
-
-<div class="form-group">
-    {{ form_label(form.age) }}
-    <div class="row">
-        <div class="col-sm-2">
-            {{ form_widget(form.age) }}
-        </div>
-    </div>
-    {{ form_errors(form.age) }}
-</div>
-
-<div class="form-group">
-    {{ form_label(form.gender) }}
-    <div class="row">
-        <div class="col-sm-4">
-            {{ form_widget(form.gender) }}
-        </div>
-    </div>
-    {{ form_errors(form.gender) }}
-</div>
-
-<div class="form-group">
-    {{ form_label(form.phoneNumber) }}
-    <div class="row">
-        <div class="col-sm-4">
-            {{ form_widget(form.phoneNumber) }}
-        </div>
-    </div>
-    {{ form_errors(form.phoneNumber) }}
-</div>
-
-{% if form.roles is defined %}
-    <h3>Administration</h3>
-    <div class="form-group">
-        {{ form_label(form.roles) }}
-        <div class="row">
-            <div class="col-sm-4">
-                {{ form_widget(form.roles) }}
+        <div id="educationDescription">
+            <div class="form-group">
+                {{ form_label(form.educationDescription) }}
+                <div class="row">
+                    <div class="col-sm-4">
+                        {{ form_widget(form.educationDescription) }}
+                    </div>
+                </div>
+                {{ form_errors(form.educationDescription) }}
             </div>
         </div>
-        {{ form_errors(form.roles) }}
+
+        <div class="form-group ">
+            {{ form_label(form.hasChildren) }}
+            <div class="row">
+                <div class="col-sm-4">
+                    {{ form_widget(form.hasChildren) }}
+                </div>
+            </div>
+            {{ form_errors(form.hasChildren) }}
+        </div>
+
+        <div id="childrenAge">
+            <div class="form-group">
+                {{ form_label(form.childrenAge) }}
+                <div class="row">
+                    <div class="col-sm-4">
+                        {{ form_widget(form.childrenAge) }}
+                    </div>
+                </div>
+                {{ form_errors(form.childrenAge) }}
+            </div>
+        </div>
+
+        <h3>Dina uppgifter</h3>
+
+        <div class="form-group">
+            {{ form_label(form.firstName) }}
+            <div class="row">
+                <div class="col-sm-4">
+                    {{ form_widget(form.firstName) }}
+                </div>
+            </div>
+            {{ form_errors(form.firstName) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.lastName) }}
+            <div class="row">
+                <div class="col-sm-4">
+                    {{ form_widget(form.lastName) }}
+                </div>
+            </div>
+            {{ form_errors(form.lastName) }}
+        </div>
+
+
+        <div class="form-group">
+            {{ form_label(form.age) }}
+            <div class="row">
+                <div class="col-sm-2">
+                    {{ form_widget(form.age) }}
+                </div>
+            </div>
+            {{ form_errors(form.age) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.gender) }}
+            <div class="row">
+                <div class="col-sm-4">
+                    {{ form_widget(form.gender) }}
+                </div>
+            </div>
+            {{ form_errors(form.gender) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.phoneNumber) }}
+            <div class="row">
+                <div class="col-sm-4">
+                    {{ form_widget(form.phoneNumber) }}
+                </div>
+            </div>
+            {{ form_errors(form.phoneNumber) }}
+        </div>
+
+        {% if form.roles is defined %}
+            <h3>Administration</h3>
+            <div class="form-group">
+                {{ form_label(form.roles) }}
+                <div class="row">
+                    <div class="col-sm-4">
+                        {{ form_widget(form.roles) }}
+                    </div>
+                </div>
+                {{ form_errors(form.roles) }}
+            </div>
+        {% endif %}
+
+        {% if form.termsAccepted is defined %}
+        <div class="form-group">
+            {{ form_widget(form.termsAccepted) }}
+            {{ form_errors(form.termsAccepted) }}
+        </div>
+        {% endif %}
+
+        {{ form_widget(form) }}
     </div>
-{% endif %}
-
-{% if form.termsAccepted is defined %}
-<div class="form-group">
-    {{ form_widget(form.termsAccepted) }}
-    {{ form_errors(form.termsAccepted) }}
 </div>
-{% endif %}
-
-{{ form_widget(form) }}
