--- a/app/Resources/views/user/settings.html.twig
+++ b/app/Resources/views/user/settings.html.twig
@@ -6,23 +6,29 @@
     <div class="inner-page">
         <div class="container">
 
-            {{ include(':user:form.html.twig') }}
+            <div class="row">
+                <div class="col-md-offset-3 col-md-6">
+                    {{ include(':user:form.html.twig') }}
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-default btn-orange btn-lg">
+                            {% if form.connectionRequests is defined %}
+                                {{ 'connection_request.form.button'|trans }}
+                            {% elseif is_granted('ROLE_COMPLETE_USER') %}
+                                {{ 'user.form.button'|trans }}
+                            {% else %}
+                                {{ 'user.form.register.button'|trans }}
+                            {% endif %}
+                        </button>
+                    </div>
+                    {{ form_end(form) }}
 
-            <div class="form-group">
-                    <button type="submit" class="btn btn-default">
-                        {% if form.connectionRequests is defined %}
-                            {{ 'connection_request.form.button'|trans }}
-                        {% else %}
-                            {{ 'user.form.button'|trans }}
-                        {% endif %}
-                    </button>
+                    <br>
+                    <p>{{ 'user.settings.delete'|trans }}</p>
+
+                    <button id="delete" class="btn btn-danger"><i class="fa fa-warning"></i> {{ 'user.settings.delete.button'|trans }}</button>
+
+                </div>
             </div>
-            {{ form_end(form) }}
-
-            <br>
-            <p>{{ 'user.settings.delete'|trans }}</p>
-
-            <button id="delete" class="btn btn-danger"><i class="fa fa-warning"></i> {{ 'user.settings.delete.button'|trans }}</button>
 
         </div>
     </div>
