--- a/app/Resources/views/admin/user/view.html.twig
+++ b/app/Resources/views/admin/user/view.html.twig
@@ -1,8 +1,4 @@
 {% extends 'base.html.twig' %}
-{% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
-{% if connectionRequestForm %}
-    {% form_theme connectionRequestForm 'bootstrap_3_horizontal_layout.html.twig' %}
-{% endif %}
 
 {% block body %}
     <div class="inner-page">
@@ -10,52 +6,71 @@
 
             <div class="row">
                 <div class="col-lg-6">
+                    <h2>Personuppgifter</h2>
                     {{ include(':user:form.html.twig') }}
 
                     <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <button
-                                    type="submit"
-                                    class="btn btn-default"
-                                    {% if not user.enabled %}disabled="disabled"{% endif %}
-                            >Spara</button>
-                            {% if user.enabled %}
-                                <a href="#" id="delete">Ta bort</a>
-                            {% endif %}
-                        </div>
+                        <button
+                                type="submit"
+                                class="btn btn-orange"
+                                {% if not user.enabled %}disabled="disabled"{% endif %}
+                        >Spara</button>
+                        {% if user.enabled %}
+                            <a href="#" id="delete">Ta bort</a>
+                        {% endif %}
                     </div>
                     {{ form_end(form) }}
                 </div>
                 <div class="col-lg-6">
                     {% if connectionRequestForm %}
+                        <h2>Kompisförfrågan</h2>
+                        <p>
+                            Skapad {{ connectionRequestForm.vars.data.createdAt|date('Y-m-d H:i:s') }}
+                        </p>
                         {{ form_start(connectionRequestForm) }}
 
                         <div class="form-group">
                             {{ form_label(connectionRequestForm.type) }}
-                            <div class="col-sm-4">
-                                {{ form_widget(connectionRequestForm.type) }}
-                                {{ form_errors(connectionRequestForm.type) }}
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    {{ form_widget(connectionRequestForm.type) }}
+                                </div>
                             </div>
+                            {{ form_errors(connectionRequestForm.type) }}
                         </div>
 
                         <div class="form-group">
                             {{ form_label(connectionRequestForm.city) }}
-                            <div class="col-sm-4">
-                                {{ form_widget(connectionRequestForm.city) }}
-                                {{ form_errors(connectionRequestForm.city) }}
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    {{ form_widget(connectionRequestForm.city) }}
+                                </div>
                             </div>
+                            {{ form_errors(connectionRequestForm.city) }}
                         </div>
 
                         <div class="form-group">
                             {{ form_label(connectionRequestForm.municipality) }}
-                            <div class="col-sm-4">
-                                {{ form_widget(connectionRequestForm.municipality) }}
-                                {{ form_errors(connectionRequestForm.municipality) }}
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    {{ form_widget(connectionRequestForm.municipality) }}
+                                </div>
                             </div>
+                            {{ form_errors(connectionRequestForm.municipality) }}
+                        </div>
+
+                        <div class="form-group">
+                            {{ form_label(connectionRequestForm.matchingProfileRequestType) }}
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    {{ form_widget(connectionRequestForm.matchingProfileRequestType) }}
+                                </div>
+                            </div>
+                            {{ form_errors(connectionRequestForm.matchingProfileRequestType) }}
                         </div>
 
                         {{ form_widget(connectionRequestForm) }}
-                        <button type="submit" class="btn btn-default">Save connection request</button>
+                        <button type="submit" class="btn btn-orange">Spara kompisförfrågan</button>
                         <button class="btn btn-danger" id="delete-connection-request" data-connection-request-id="{{ connectionRequestForm.vars.value.id }}">Ta bort</button>
                         {{ form_end(connectionRequestForm) }}
                     {% endif %}
