--- a/app/Resources/views/default/notLoggedIn.html.twig
+++ b/app/Resources/views/default/notLoggedIn.html.twig
@@ -8,7 +8,7 @@
                     {{ 'homepage.cta.message'|trans|raw }}
                 </p>
                 <a href="{{ path('fos_user_registration_register') }}" class="btn btn-lg btn-orange btn-super-lg">
-                    <i class="fa fa-users"></i> {{ 'homepage.cta.button'|trans }}
+                    {{ 'homepage.cta.button'|trans }}
                 </a>
                 <br><br>
             </div>
