Correction text update

--- a/app/Resources/views/email/confirmMeeting.html.twig
+++ b/app/Resources/views/email/confirmMeeting.html.twig
@@ -24,7 +24,7 @@
     <p>
         Hi {{ user.name }}!<br>
         You receive this email because you have recently been matched with {{ friend.name }} through Kompisbyrån. It
-        has now been a couple of weeks since we matched you and we would now like to know if you have met with your new friend
+        has now been a couple of weeks since we matched you and we would love to know if you have met with your new friend
         or not. Please leave your answer by visiting the following link:
     </p>
     <p>
