--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <div class="row box">
+                <div class="row box vertical-align">
                     <div class="col-md-6">
                         <h3>{{ 'register.create.header'|trans }}</h3>
 
@@ -32,7 +32,7 @@
 
                             {{ form_rest(form) }}
 
-                            <button type="submit" class="btn btn-orange col-lg-12">{{ 'register.form.button'|trans }}</button>
+                            <button type="submit" class="btn btn-orange col-lg-12 btn-super-lg">{{ 'register.form.button'|trans }}</button>
                             <br><br>
                             <div class="line-behind"><span>Är du redan med i Kompisbyrån?</span></div>
                             <a href="{{ path('login') }}" class="btn btn-default col-lg-12">{{ 'login.form.button'|trans }}</a>
