--- a/app/Resources/views/email/meetAgain.html.twig
+++ b/app/Resources/views/email/meetAgain.html.twig
@@ -7,7 +7,7 @@
 <p>
     Vi skriver till dig eftersom du tidigare har träffat en kompis via Kompisbyrån. Just nu är det många nya svenskar
     som önskar träffa etablerade svenskar. <strong>Därför undrar vi om du skulle vilja vara med igen och bli matchad
-    med en ny kompis?</strong>. Om du vill få en ny matchning behöver du bara klicka på knappen
+    med en ny kompis?</strong> Om du vill få en ny matchning behöver du bara klicka på knappen
     <a href="{{ url('public_meet_again', {'uuid': user.uuid, 'id': connection.id}) }}">på den här sidan</a>.
 </p>
 <p>
