--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,8 +10,8 @@
     {% block metatags %}
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Kompisbyrån!" />
-    <meta property="og:url" content="http://www.kompisbyran.se"/>
-    <meta property="og:image" content="http://www.kompisbyran.se/images/Kompis3.JPG" />
+    <meta property="og:url" content="https://www.kompisbyran.se"/>
+    <meta property="og:image" content="https://www.kompisbyran.se/images/Kompis3.JPG" />
     <meta property="og:description" content="Kompisbyrån hjälper människor att träffa nya kompisar med liknande intressen. Vi skapar kontakt mellan dig som är ny i Sverige och dig som har bott i Sverige länge." />
     {% endblock %}
 
