--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2,8 +2,8 @@
 Designed by : http://responsivewebinc.com
 ************************/
 /* Fonts */
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,700);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic);
 
 /* Basic CSS starts */
 
