Danderyd in list of partners

--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -21,7 +21,7 @@
             <div class="col-md-4 col-sm-12">
                 <div class="partner-wrapper">
                     <img src="{{ asset('images/oppna-dorren.jpg') }}" alt="Öppna dörren" class="partner-logo"><br>
-                    <img src="{{ asset('images/delicato.png') }}" alt="Delicato" class="partner-logo"><br>
+                    <img src="{{ asset('images/danderyd-logo.jpg') }}" alt="Danderyd" class="partner-logo"><br>
                     <img src="{{ asset('images/solna.gif') }}" alt="Solna" class="partner-logo"><br>
                     <img src="{{ asset('images/tyreso.gif') }}" alt="Tyresö" class="partner-logo"><br>
                     <img src="{{ asset('images/eu-flagga.png') }}" alt="EU - Europeiska socialfonden" class="partner-logo"><br>
