Filter connections by learner home municipality

--- a/app/Resources/views/admin/connection/index.html.twig
+++ b/app/Resources/views/admin/connection/index.html.twig
@@ -119,6 +119,11 @@
                 {{ form_widget(form.municipality) }}
                 </div>
                 <div class="form-group">
+                {{ form_label(form.learnerHomeMunicipality) }}
+                {{ form_widget(form.learnerHomeMunicipality) }}
+                </div>
+                <br><br>
+                <div class="form-group">
                 {{ form_label(form.from) }}
                 {{ form_widget(form.from) }}
                 </div>
@@ -126,7 +131,6 @@
                 {{ form_label(form.to) }}
                 {{ form_widget(form.to) }}
                 </div>
-                <br><br>
                 <div class="form-group">
                 {{ form_label(form.meetingStatus) }}
                 {{ form_widget(form.meetingStatus) }}
